The most significant changes include the replacement of the `SkeletonMeshRenderer` class with the `SkeletonRenderer` class, the renaming and updating of the `loadSkel` method to `loadSkeleton`, and the removal of the `listeners` method with its contents moved to the `create` method. Additionally, the `create`, `render`, and `reload` methods were updated to incorporate new functionalities and improvements.
Here is a list of the changes:

1. The `SkeletonMeshRenderer` class was replaced with the `SkeletonRenderer` class. This change was made to improve the rendering of the skeleton.

2. The `loadSkel` method was renamed to `loadSkeleton` and was updated to handle exceptions and to use a more efficient way of loading the skeleton data. This change was made to improve the loading process and to make the code more robust.

3. The `listeners` method was removed and its contents were moved to the `create` method. This change was made to simplify the code structure and to improve the organization of the code.

4. The `create` method was updated to use the `loadSkeleton` method and to add listeners to the skin, animate, isLoop, isPlay, scale, X, Y, and speed properties. This change was made to improve the functionality of the `create` method.

5. The `render` method was updated to set the title of the graphics window to include the frames per second, to set the premultiplied alpha of the renderer, and to update the progress bar and the isPlay property based on the current animation state. This change was made to improve the rendering process and to provide more information to the user.

6. The `reload` method was updated to use the `loadSkeleton` method. This change was made to improve the reloading process.

7. The `skinListener`, `animateListener`, `isLoopListener`, `isPlayListener`, `scaleListener`, `XListener`, `YListener`, and `speedListener` were updated to use lambda expressions with underscore parameters, indicating that the parameters are not used. This change was m