@@ -23,7 +23,7 @@ public class Spine21 extends Spine {
 
     private OrthographicCamera camera;
 
-    private SkeletonMeshRenderer renderer;
+    private SkeletonRenderer renderer;
 
     private Skeleton skeleton;
 
@@ -31,33 +31,40 @@ public class Spine21 extends Spine {
 
     private float trackTime;
 
-    private ChangeListener<String> skinListener = (observable, oldValue, newValue) -> {
+    private ChangeListener<String> skinListener = (_, _, newValue) -> {
         if (newValue == null)
             skeleton.setSkin((Skin) null);
-        else skeleton.setSkin(newValue);
+        else
+            skeleton.setSkin(newValue);
+
         skeleton.setSlotsToSetupPose();
     };
-    private ChangeListener<String> animateListener = (observable, oldValue, newValue) -> {
+
+    private ChangeListener<String> animateListener = (_, _, newValue) -> {
         if (newValue != null) {
             state.setAnimation(0, newValue, isLoop.get());
             isPlay.set(true);
         } else
             isPlay.set(false);
     };
-    private ChangeListener<Boolean> isLoopListener = (observable, oldValue, newValue) -> {
+
+    private ChangeListener<Boolean> isLoopListener = (_, _, _) -> {
         if (isPlay.get()) {
             isPlay.set(false);
             isPlay.set(true);
         }
     };
-    private ChangeListener<Boolean> isPlayListener = (observable, oldValue, newValue) -> {
+
+    private ChangeListener<Boolean> isPlayListener = (_, oldValue, newValue) -> {
         if (!newValue.equals(oldValue)) {
             if (newValue) {
                 if (animate.get() == null)
-                    state.setAnimation(0, animatesList.get(0), isLoop.get());
+                    state.setAnimation(0, animatesList.getFirst(), isLoop.get());
                 else
                     state.setAnimation(0, animate.get(), isLoop.get());
+
                 state.setTimeScale(speed.get());
+
                 if (percent < 1)
                     state.getCurrent(0).setTime(trackTime);
             } else {
@@ -66,28 +73,35 @@ public class Spine21 extends Spine {
             }
         }
     };
-    private ChangeListener<Number> scaleListener = (observable, oldValue, newValue) -> {
-        Gdx.app.postRunnable(this::loadSkel);
+
+    private ChangeListener<Number> scaleListener = (_, _, _) -> {
+        Gdx.app.postRunnable(this::loadSkeleton);
+
         if (animate.get() != null) {
             state.setAnimation(0, animate.get(), isLoop.get());
             isPlay.set(true);
         }
     };
-    private ChangeListener<Number> XListener = (observable, oldValue, newValue) -> {
-        Gdx.app.postRunnable(this::loadSkel);
+
+    private ChangeListener<Number> XListener = (_, _, _) -> {
+        Gdx.app.postRunnable(this::loadSkeleton);
+
         if (animate.get() != null) {
             state.setAnimation(0, animate.get(), isLoop.get());
             isPlay.set(true);
         }
     };
-    private ChangeListener<Number> YListener = (observable, oldValue, newValue) -> {
-        Gdx.app.postRunnable(this::loadSkel);
+
+    private ChangeListener<Number> YListener = (_, _, _) -> {
+        Gdx.app.postRunnable(this::loadSkeleton);
+
         if (animate.get() != null) {
             state.setAnimation(0, animate.get(), isLoop.get());
             isPlay.set(true);
         }
     };
-    private ChangeListener<Number> speedListener = (observable, oldValue, newValue) -> state.setTimeScale(speed.get());
+
+    private ChangeListener<Number> speedListener = (_, _, _) -> state.setTimeScale(speed.get());
 
     private void lists(Array<Skin> skins, Array<Animation> animations) {
         for (Skin skin : skins)
@@ -97,62 +111,79 @@ public class Spine21 extends Spine {
             animatesList.add(animation.getName());
     }
 
-    private boolean loadSkel() {
-        TextureAtlas atlas = new TextureAtlas(new TextureAtlasData(atlasFile, atlasFile.parent(), false)) {
+    private boolean loadSkeleton() {
+        try {
+            TextureAtlasData atlasData = new TextureAtlasData(atlasFile, atlasFile.parent(), false);
+
+            boolean linear = true;
+            for (int i = 0, n = atlasData.getPages().size; i < n; i++) {
+                TextureAtlasData.Page page = atlasData.getPages().get(i);
+                if (page.minFilter != TextureFilter.Linear || page.magFilter != TextureFilter.Linear) {
+                    linear = false;
+                    break;
+                }
+            }
+
+            TextureAtlas atlas = getAtlas(linear, atlasData);
+
+            SkeletonData skeletonData;
+
+            if (isBinary) {
+                SkeletonBinary binary = new SkeletonBinary(atlas);
+                binary.setScale(scale.get());
+                skeletonData = binary.readSkeletonData(skelFile);
+            } else {
+                SkeletonJson json = new SkeletonJson(atlas);
+                json.setScale(scale.get());
+                skeletonData = json.readSkeletonData(skelFile);
+            }
+
+            if (skeletonData.getBones().size == 0) {
+                System.out.println("骨骼为空");
+                return false;
+            }
+
+            skeleton = new Skeleton(skeletonData);
+            skeleton.updateWorldTransform();
+            skeleton.setToSetupPose();
+            skeleton.setPosition(X.get(), Y.get());
+
+            state = new AnimationState(new AnimationStateData(skeletonData));
+            spineVersion.set(skeletonData.getVersion());
+            projectName.set(skeletonData.getName());
+
+            if (skinsList.isEmpty())
+                lists(skeletonData.getSkins(), skeletonData.getAnimations());
+
+            return true;
+        } catch (Exception e) {
+            e.printStackTrace();
+            projectName.set("Failed to Load");
+            return false;
+        }
+    }
+
+    private TextureAtlas getAtlas(boolean linear, TextureAtlasData atlasData) {
+        TextureFilter filter = linear ? TextureFilter.Linear : TextureFilter.Nearest;
+
+        return new TextureAtlas(atlasData) {
             public AtlasRegion findRegion(String name) {
                 AtlasRegion region = super.findRegion(name);
+
                 if (region == null) {
-                    FileHandle file = skelFile.sibling(name + ".png");
+                    FileHandle file = skelFile.sibling(STR."\{name}.png");
+
                     if (file.exists()) {
                         Texture texture = new Texture(file);
-                        texture.setFilter(TextureFilter.Linear, TextureFilter.Linear);
+                        texture.setFilter(filter, filter);
                         region = new AtlasRegion(texture, 0, 0, texture.getWidth(), texture.getHeight());
                         region.name = name;
                     }
                 }
+
                 return region;
             }
         };
-
-        SkeletonData skeletonData;
-        if (isBinary) {
-            SkeletonBinary binary = new SkeletonBinary(atlas);
-            binary.setScale(scale.get());
-            skeletonData = binary.readSkeletonData(skelFile);
-        } else {
-            SkeletonJson json = new SkeletonJson(atlas);
-            json.setScale(scale.get());
-            skeletonData = json.readSkeletonData(skelFile);
-        }
-        if (skeletonData.getBones().size == 0) {
-            System.out.println("骨骼为空");
-            return false;
-        }
-
-        skeleton = new Skeleton(skeletonData);
-        skeleton.updateWorldTransform();
-        skeleton.setToSetupPose();
-        skeleton.setPosition(X.get(), Y.get());
-
-        state = new AnimationState(new AnimationStateData(skeletonData));
-        spineVersion.set(skeletonData.getVersion());
-        projectName.set(skeletonData.getName());
-
-        if (skinsList.isEmpty())
-            lists(skeletonData.getSkins(), skeletonData.getAnimations());
-
-        return true;
-    }
-
-    private void listeners() {
-        skin.addListener(skinListener);
-        animate.addListener(animateListener);
-        isLoop.addListener(isLoopListener);
-        isPlay.addListener(isPlayListener);
-        scale.addListener(scaleListener);
-        X.addListener(XListener);
-        Y.addListener(YListener);
-        speed.addListener(speedListener);
     }
 
     public void reload() {
@@ -183,17 +214,26 @@ public class Spine21 extends Spine {
             YListener = null;
             speedListener = null;
         } else
-            Gdx.app.postRunnable(this::loadSkel);
+            Gdx.app.postRunnable(this::loadSkeleton);
     }
 
     public void create() {
         batch = new PolygonSpriteBatch();
         camera = new OrthographicCamera(Gdx.graphics.getWidth(), Gdx.graphics.getHeight());
-        renderer = new SkeletonMeshRenderer();
+
+        renderer = new SkeletonRenderer();
         renderer.setPremultipliedAlpha(true);
 
-        if (loadSkel())
-            listeners();
+        if (loadSkeleton()) {
+            skin.addListener(skinListener);
+            animate.addListener(animateListener);
+            isLoop.addListener(isLoopListener);
+            isPlay.addListener(isPlayListener);
+            scale.addListener(scaleListener);
+            X.addListener(XListener);
+            Y.addListener(YListener);
+            speed.addListener(speedListener);
+        }
     }
 
     public void render() {
@@ -202,7 +242,8 @@ public class Spine21 extends Spine {
         skeleton.updateWorldTransform();
 
         Gdx.gl.glClear(GL20.GL_COLOR_BUFFER_BIT);
-        Gdx.graphics.setTitle("FPS : " + Gdx.graphics.getFramesPerSecond());
+        Gdx.graphics.setTitle(STR."FPS : \{Gdx.graphics.getFramesPerSecond()}");
+
         renderer.setPremultipliedAlpha(Main.renderA);
 
         camera.update();
@@ -212,12 +253,16 @@ public class Spine21 extends Spine {
         batch.end();
 
         TrackEntry entry = state.getCurrent(0);
+
         if (entry != null) {
             percent = entry.getTime() / entry.getEndTime();
+
             if (entry.getLoop())
                 percent %= 1;
+
             if (isPlay.get())
                 Platform.runLater(() -> Main.progressBar.setProgress(percent));
+
             if (percent >= 1 && !isLoop.get())
                 isPlay.set(false);
         }
